html overflow and post type issue

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -9,7 +9,7 @@ rgb(47,131,82);
 }
 html{
 	height: 100%;
-	overflow: hidden;
+	/*overflow: hidden;*/
 }
 
 html, body{
